# Kernel_Image_Processing

./: .gitignore  CMakeLists.txt  CMakePresets.json  main.py
settings/: config.json
src/: main.cpp  main.cu
